Modulo difunto terminado

--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     <script src="~/assets/plugins/datetimepicker/js/picker.js"></script>
     <script src="~/assets/plugins/datetimepicker/js/picker.time.js"></script>
     <script src="~/assets/plugins/datetimepicker/js/picker.date.js"></script>
-    <script src="~/assets/plugins/bootstrap-material-datetimepicker/js/moment.min.js"></script>
+    <script src="~/assets/plugins/bootstrap-material-datetimepicker/js/moment-with-locales.js"></script>
     <script src="~/assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.min.js"></script>
     <script src="~/assets/js/form-date-time-pickes.js"></script>
 
