Modulo Colaborador terminado (FALTA CLAVE PARA INICIO DE SESION)

--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
@@ -106,11 +106,11 @@
                 </li>
                 <li class="menu-label">Mantenimiento</li>
                 <li>
-                    <a href="/Trabajador">
+                    <a href="/Colaborador">
                         <div class="parent-icon">
                             <i class="lni lni-consulting"></i>
                         </div>
-                        <div class="person-circle-sharp">Trabajador</div>
+                        <div class="person-circle-sharp"> Colaborador</div>
                     </a>
                 </li>
             </ul>
