--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
@@ -17,8 +17,39 @@
         <div class="btn-group">
             <button type="button" class="btn btn-outline-primary" onclick="verPabellon()">Nuevo <i class="lni lni-plus"></i></button>
         </div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-outline-primary">Carga Masiva</button>
+            <button type="button"
+                    class="btn btn-outline-primary split-bg-primary dropdown-toggle dropdown-toggle-split"
+                    data-bs-toggle="dropdown">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-end">
+                <a class="dropdown-item" href="~/assets/Plantillas/PLANTILLA_PABELLON_NICHOS.xlsx">Descargar Plantilla</a>
+                <a class="dropdown-item" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#modalCargaMasiva">Subir Archivo</a>
+            </div>
+        </div>
     </div>
 </div>
+
+<div class="modal fade" id="modalCargaMasiva" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">SUBIR ARCHIVO PARA CARGA MASIVA</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input class="form-control" type="file" id="pabellonFile">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" onclick="CargaMasivaPabellon()">Cargar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--end breadcrumb-->
 <hr />
 <div class="card">
