Envio de correo para recuperación de clave - formato personalizado

--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Admin/ResetPassword.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Admin/ResetPassword.cshtml
@@ -16,6 +16,7 @@
 
     <!--plugins-->
     <link href="~/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+    <link href="~/assets/css/sweetalert2.css" rel="stylesheet" />
 
     <!-- CSS Files -->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +25,11 @@
     <link href="~/assets/css/icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>SYN-UI - Bootstrap Admin Template</title>
+    <script src="~/assets/js/jquery.min.js"></script>
+    <script src="~/assets/js/sweetalert2.min.js"></script>
+    <script src="~/assets/js/sweetalert2.init.js"></script>
+    <script src="~/js/util.js"></script>
+    <title>SAC</title>
 </head>
 
 <body class="bg-white">
@@ -43,12 +48,12 @@
                                 </div>
                                 <form class="form-body row g-3">
                                     <div class="col-12">
-                                        <label for="inputEmail" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="abc@example.com">
+                                        <label for="inputEmailRecuperacion" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="inputEmailRecuperacion" placeholder="abc@example.com">
                                     </div>
                                     <div class="col-12 col-lg-12">
                                         <div class="d-grid">
-                                            <button type="button" class="btn btn-primary">Enviar</button>
+                                            <button type="button" id="btnEnviar" class="btn btn-primary">Enviar</button>
                                         </div>
                                     </div>
                                 </form>
@@ -68,8 +73,7 @@
         </div>
     </div>
     <!--end wrapper-->
-
-
+    <script src="~/js/admin.js"></script>
 </body>
 
 </html>
