--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Admin/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Admin/Index.cshtml
@@ -16,6 +16,7 @@
 
     <!--plugins-->
     <link href="~/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+    <link href="~/assets/css/sweetalert2.css" rel="stylesheet" />
 
     <!-- CSS Files -->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +25,11 @@
     <link href="~/assets/css/icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>Login | Cementerios Web</title>
+    <script src="~/assets/js/jquery.min.js"></script>
+    <script src="~/assets/js/sweetalert2.min.js"></script>
+    <script src="~/assets/js/sweetalert2.init.js"></script>
+    <script src="~/js/util.js"></script>
+    <title>Login | SAC</title>
 </head>
 
 <body class="bg-white">
@@ -60,7 +65,7 @@
                                     </div>
                                     <div class="col-12 col-lg-12">
                                         <div class="d-grid">
-                                            <button type="button" class="btn btn-primary">Iniciar</button>
+                                            <button id="btnLogin" type="button" class="btn btn-primary">Iniciar</button>
                                         </div>
                                     </div>
                                 </form>
@@ -78,8 +83,7 @@
         </div>
     </div>
     <!--end wrapper-->
-
-
+    <script src="~/js/admin.js"></script>
 </body>
 
 </html>
