LOGIN TERMINADO Inserción y validación de difuntos avanzado

--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
@@ -112,7 +112,8 @@
                                     <tr>
                                         <th>Código</th>
                                         <th>Estado</th>
-                                        <th># Difuntos</th>
+                                        <th># Difuntos Total</th>
+                                        <th># Difuntos Disponible</th>
                                         <th>Acciones</th>
                                     </tr>
                                 </thead>
