--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
     <script src="assets/js/main.js"></script>
     <script src="~/js/util.js"></script>
     <title>SAC</title>
+
+    <script>
+        var userSystem = sessionStorage.getItem("nombreUsuario");
+        if (es_vacio(userSystem)) window.location.href = "/Admin/Index";
+        $(document).ready(function () { $("#userNameSession").html(userSystem) });
+    </script>
 </head>
 <body>
 
@@ -125,68 +131,26 @@
                         <li class="nav-item dropdown dropdown-user-setting">
                             <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="javascript:;" data-bs-toggle="dropdown">
                                 <div class="user-setting">
-                                    <img src="~/assets/images/avatars/06.png" class="user-img" alt="">
+                                    <img src="~/assets/images/avatars/11.png" class="user-img" alt="">
                                 </div>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
                                     <a class="dropdown-item" href="javascript:;">
                                         <div class="d-flex flex-row align-items-center gap-2">
-                                            <img src="~/assets/images/avatars/06.png" alt="" class="rounded-circle" width="54" height="54">
+                                            <img src="~/assets/images/avatars/11.png" alt="" class="rounded-circle" width="54" height="54">
                                             <div class="">
-                                                <h6 class="mb-0 dropdown-user-name">Jhon Deo</h6>
-                                                <small class="mb-0 dropdown-user-designation text-secondary">UI Developer</small>
+                                                <h6 class="mb-0 dropdown-user-name" id="userNameSession"></h6>
+                                                <small class="mb-0 dropdown-user-designation text-secondary">Colaborador</small>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
-                                <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    <a class="dropdown-item" href="javascript:;">
-                                        <div class="d-flex align-items-center">
-                                            <div class=""><ion-icon name="person-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Profile</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="javascript:;">
-                                        <div class="d-flex align-items-center">
-                                            <div class=""><ion-icon name="settings-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Setting</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="javascript:;">
-                                        <div class="d-flex align-items-center">
-                                            <div class=""><ion-icon name="speedometer-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Dashboard</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="javascript:;">
-                                        <div class="d-flex align-items-center">
-                                            <div class=""><ion-icon name="wallet-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Earnings</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="javascript:;">
-                                        <div class="d-flex align-items-center">
-                                            <div class=""><ion-icon name="cloud-download-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Downloads</span></div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <a class="dropdown-item" href="javascript:;">
+                                    <a class="dropdown-item" href="/Admin/Index?EXIT=1">
                                         <div class="d-flex align-items-center">
                                             <div class=""><ion-icon name="log-out-outline"></ion-icon></div>
-                                            <div class="ms-3"><span>Logout</span></div>
+                                            <div class="ms-3"><span>Cerrar Sesión</span></div>
                                         </div>
                                     </a>
                                 </li>
