--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
@@ -1,3 +1,157 @@
 ﻿@{
-    ViewData["Title"] = "Home page";
+    Layout = null;
 }
+
+<!doctype html>
+<html lang="en" class="light-theme">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- loader-->
+    <link href="~/assets/css/pace.min.css" rel="stylesheet" />
+    <script src="~/assets/js/pace.min.js"></script>
+
+    <!--plugins-->
+    <link href="~/assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
+    <link href="~/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+    <link href="~/assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+    <link href="~/assets/plugins/datatable/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
+    <link href="~/assets/css/sweetalert2.css" rel="stylesheet" />
+    <link href="~/assets/plugins/datetimepicker/css/classic.css" rel="stylesheet" />
+    <link href="~/assets/plugins/datetimepicker/css/classic.time.css" rel="stylesheet" />
+    <link href="~/assets/plugins/datetimepicker/css/classic.date.css" rel="stylesheet" />
+    <link href="~/assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.min.css" rel="stylesheet" />
+
+    <!-- CSS Files -->
+    <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/css/bootstrap-extended.css" rel="stylesheet">
+    <link href="~/assets/css/style.css" rel="stylesheet">
+    <link href="~/assets/css/icons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+    <!--Theme Styles-->
+    <link href="~/assets/css/header-colors.css" rel="stylesheet" />
+
+    <!-- JS Files-->
+    <script src="~/assets/js/jquery.min.js"></script>
+    <script src="~/assets/plugins/simplebar/js/simplebar.min.js"></script>
+    <script src="~/assets/plugins/metismenu/js/metisMenu.min.js"></script>
+    <script src="~/assets/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <!--plugins-->
+    <script src="~/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+    <script src="~/assets/plugins/chartjs/chart.min.js"></script>
+    <script src="~/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
+    <script src="~/assets/plugins/datatable/js/dataTables.bootstrap5.min.js"></script>
+    <script src="~/assets/js/table-datatable.js"></script>
+    <script src="~/assets/js/sweetalert2.min.js"></script>
+    <script src="~/assets/js/sweetalert2.init.js"></script>
+    <script src="~/assets/plugins/datetimepicker/js/legacy.js"></script>
+    <script src="~/assets/plugins/datetimepicker/js/picker.js"></script>
+    <script src="~/assets/plugins/datetimepicker/js/picker.time.js"></script>
+    <script src="~/assets/plugins/datetimepicker/js/picker.date.js"></script>
+    <script src="~/assets/plugins/bootstrap-material-datetimepicker/js/moment-with-locales.js"></script>
+    <script src="~/assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.min.js"></script>
+    <script src="~/assets/js/form-date-time-pickes.js"></script>
+
+    <!-- Main JS-->
+    <script src="assets/js/main.js"></script>
+    <script src="~/js/util.js"></script>
+    <script src="~/js/home.js"></script>
+
+    <title>Cementerio Metropolitano</title>
+</head>
+<body>
+    <!--start wrapper-->
+    <div class="wrapper">
+        <!-- start page content wrapper-->
+        <div class="page-content">
+
+            <!--start breadcrumb-->
+            <div class="page-breadcrumb d-none d-sm-flex align-items-center center mb-3">
+                <div class="breadcrumb-title pe-3">Encuentra a tu ser querido</div>
+                <div class="ms-auto">
+                    <form class="needs-validation" id="formDifunto" novalidate method="post">
+                        <div class="btn-group">
+                            <input type="text" class="form-control" id="nombreDifunto" placeholder="Nombres">
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" class="form-control" id="nombrePaterno" placeholder="Apellido Paterno">
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" class="form-control" id="nombreMaterno" placeholder="Apellido Materno">
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-outline-primary" onclick="buscarSerQuerido()">Buscar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!--end breadcrumb-->
+
+            <div class="row" id="tablaGeneral" style="display:none">
+                <div class="col-12">
+                    <div class="card radius-10">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table id="tablaDifunto" class="table table-striped table-bordered" style="width:100%">
+                                    <thead>
+                                        <tr>
+                                            <th style="text-align:center">Nombres</th>
+                                            <th style="text-align:center">Apellido Paterno</th>
+                                            <th style="text-align:center">Apellido Materno</th>
+                                            <th style="text-align:center">Fecha Defunción</th>
+                                            <th style="text-align:center">Acciones</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="Detalle" style="display:none">
+                <div class="col-12 col-lg-4 col-xl-3">
+                    <div class="card radius-10">
+                        <div class="card-body">
+                            <h5 class="mb-3">Nombre</h5>
+                            <p class="mb-0" id="nombreDifuntoCard"></p>
+                        </div>
+                    </div>
+                    <div class="card radius-10">
+                        <div class="card-body">
+                            <h5 class="mb-3">Pabellón</h5>
+                            <p class="" id="nombrePabellonCard"></p>
+                        </div>
+                    </div>
+                    <div class="card radius-10">
+                        <div class="card-body">
+                            <h5 class="mb-3">Defunción</h5>
+                            <p class="" id="fecDefuncionCard"></p>
+                        </div>
+                    </div>
+                    <div class="card radius-10">
+                        <div class="card-body">
+                            <h5 class="mb-3">Nicho</h5>
+                            <p class="" id="nombreNichoCard"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-8 col-xl-9">
+                    <div class="card overflow-hidden radius-10">
+                        <div class="card-body">
+                            <div class="mt-5 d-flex align-items-start justify-content-between">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--end wrapper-->
+</body>
+</html>
