--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
@@ -144,7 +144,7 @@
                     <div class="card overflow-hidden radius-10">
                         <div class="card-body">
                             <div class="mt-5 d-flex align-items-start justify-content-between">
-                                
+                                <img id="imgPabellon" />
                             </div>
                         </div>
                     </div>
