--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Pabellon/Index.cshtml
@@ -165,17 +165,17 @@
 </div>
 
 <div class="modal fade" id="modalCroquis" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="lblmodalCroquis"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="col-12 col-lg-8 col-xl-9">
+                <div class="col-12 col-lg-12 col-xl-12">
                     <div class="card overflow-hidden radius-10">
                         <div class="card-body">
-                            <div class="mt-5 d-flex align-items-start justify-content-between">
+                            <div class="d-flex align-items-start justify-content-between">
                                 <img id="imgCroquis" />
                             </div>
                         </div>
