--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Difunto/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Difunto/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!--start breadcrumb-->
-<div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
+<div class="page-breadcrumb d-sm-flex align-items-center mb-3">
     <div class="breadcrumb-title pe-3">Lista de Difuntos</div>
     <div class="ps-3">
         <nav aria-label="breadcrumb">
