--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
         <div class="page-content">
 
             <!--start breadcrumb-->
-            <div class="page-breadcrumb d-none d-sm-flex align-items-center center mb-3">
+            <div class="page-breadcrumb d-sm-flex align-items-center center mb-3">
                 <div class="breadcrumb-title pe-3">Encuentra a tu ser querido</div>
                 <div class="ms-auto">
                     <form class="needs-validation" id="formDifunto" novalidate method="post">
