--- a/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
+++ b/SW.CEMENTERIO/SW.CEMENTERIO/Views/Home/Index.cshtml
@@ -90,6 +90,11 @@
                 </div>
             </div>
             <!--end breadcrumb-->
+            <div id="divLogoCementerio" style="display:none">
+                <center>
+                <img src="~/assets/images/logo10_4_234345.png" class="logo-icon" alt="logo icon" style="width:500px">
+                </center>
+            </div>
 
             <div class="row" id="tablaGeneral" style="display:none">
                 <div class="col-12">
